server_exam/src/main/kotlin/com/example/server_exam/error/IdOverlapException.kt
package com.example.server_exam.error

class IdOverlapException(message:String):RuntimeException(message)